2005-09-13  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.h: Add documentation for cairo_test functions.
	
	* test/cairo-test.c: (cairo_test_init), (cairo_test_expecting):
	Abstract log fie creation into cairo_test_init for use by tests
	that don't use cairo_test().

	* test/.cvsignore:
	* test/Makefile.am:
	* test/pthread-show-text.c: (start), (main): Add new test for bug
	#4299 as reported by Alexey Shabalin.

2005-09-12  Carl Worth  <cworth@cworth.org>

	Originally 2005-09-06  Carl Worth  <cworth@cworth.org>:

	* src/cairo-cache-private.h: Rename:

		_cairo_cache_preserve -> _cairo_cache_freeze
		_cairo_cache_release  -> _cairo_cache_thaw
	
	* src/cairo-scaled-font.c: (_cairo_scaled_font_show_glyphs): Track
	rename of _cairo_cache_freeze/thaw.

	* src/cairo-cache.c: (_cairo_cache_init), (_cairo_cache_freeze),
	(_cairo_cache_thaw), (_cairo_cache_shrink_to_accomodate),
	(_cairo_cache_insert): Track rename. Add stacking behavior to
	_cairo_cache_freeze/thaw. Abstract out shrinking from
	_cairo_cache_insert so that _cairo_cache_thaw will also shrink as
	necessary.

	* src/cairo-cache.c: (_cairo_cache_remove): Make this function
	static since its current limitation to accept an entry rather than
	a key makes it not as externally useful as would be
	desirable. Document this limitation.

2005-09-12  Carl Worth  <cworth@cworth.org>

	Fix for bug #4401 as reported by Tim Mooney:

	* configure.in: Don't bother checking for sincos function.
	
	* src/cairo-matrix.c: (cairo_matrix_init_rotate): Don't use sincos
	function since it is apparently buggy on some platforms, (Tru64 at
	least).

2005-09-09  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add two bugs to the 1.0.2 roadmap:
	 4408 Missing dashes on stroked curves
	 4409 Dashes are missing initial caps

2005-09-08  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add open bug list for 1.0.2.

2005-09-07  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Put win32 mutex locking on the 1.2.0 roadmap.
